Fix drawer to open/close on narrow screens
This commit is a bit noisy due to indentation level changes.
All the forms required a down tab.

Form container is now spaced to take up a comfortable amount
of the screen width. This means we can just use global left
align, and remove the need for all the wrapping `<Box>` components
just to left align things.

Add app bar to top of form container

Fixes #224

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
 }
 
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -49,7 +49,4 @@ form {
   padding: 1em;
   padding-left: 2em;
   padding-right: 2em;
-  margin-top: 2em;
-  margin-bottom: 1em;
-  min-width: 20%;
 }
